automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -261,11 +261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # countries.extend(\"Thailand\")"
+    "None # countries.append('Thailand')"
    ]
   },
   {
