automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -261,11 +261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # countries.append('Thailand')"
+    "countries.append('Thailand')"
    ]
   },
   {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -295,10 +295,11 @@
        " 'Italy',\n",
        " 'Canada',\n",
        " 'South Korea',\n",
-       " 'Malta']"
+       " 'Malta',\n",
+       " 'Thailand']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
