--- a/index.ipynb
+++ b/index.ipynb
@@ -469,7 +469,7 @@
    },
    "outputs": [],
    "source": [
-    "num_of_repeats = len(countries)\n",
+    "num_of_repeats = len(countries) - len(unique_countr)\n",
     "num_of_repeats # 3"
    ]
   },
